<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>vavi</groupId>
  <artifactId>vavi-image-avif</artifactId>
  <version>0.0.6</version>

  <name>Java AVIF Decoder</name>
  <scm>
    <url>https://github.com/umjammer/vavi-image-avif/</url>
  </scm>
  <url>https://github.com/umjammer/vavi-image-avif/</url>
  <issueManagement>
    <url>https://github.com/umjammer/vavi-image-avif/issues</url>
  </issueManagement>
  <description>Java AVIF Decoder</description>

  <properties>
    <jnaerator.version>0.12</jnaerator.version>
    <native.prefix>/usr/local</native.prefix>
  </properties>

  <profiles>
    <profile>
      <id>mac arm64</id>
      <activation>
        <os>
          <family>mac</family>
          <arch>aarch64</arch>
        </os>
      </activation>
      <properties>
        <native.prefix>/opt/homebrew</native.prefix>
      </properties>
    </profile>

    <profile>
      <!-- mvn -P jnaerator jnaerator:generate -->
      <id>jnaerator</id>
      <build>
        <plugins>
          <plugin>
            <groupId>com.nativelibs4java</groupId>
            <artifactId>maven-jnaerator-plugin</artifactId>
            <version>${jnaerator.version}</version>
            <executions>
              <execution>
                <goals>
                  <goal>generate</goal>
                </goals>
              </execution>
            </executions>
            <configuration>
              <javaOutputDirectory>${project.build.sourceDirectory}</javaOutputDirectory>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <release>17</release>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.2.2</version>
        <configuration>
          <argLine>
            --add-opens java.logging/java.util.logging=ALL-UNNAMED
            -Djava.util.logging.config.file=${project.build.testOutputDirectory}/logging.properties
            -Djna.library.path=@{native.prefix}/lib
          </argLine>
          <trimStackTrace>false</trimStackTrace>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>5.10.2</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <repositories>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>com.github.umjammer</groupId>
      <artifactId>vavi-image</artifactId>
      <version>1.0.11</version>
    </dependency>
    <dependency>
      <groupId>net.java.dev.jna</groupId>
      <artifactId>jna</artifactId>
      <version>5.14.0</version>
    </dependency>

    <dependency>
      <groupId>org.apache.maven</groupId>
      <artifactId>maven-artifact</artifactId>
      <version>3.9.6</version>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.platform</groupId>
      <artifactId>junit-platform-commons</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.github.umjammer</groupId>
      <artifactId>vavi-commons</artifactId>
      <version>1.1.12</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
</project>
